CHANGELOG

Current Version 0.4
- **SmartR and the eAE merge into one project named eTRIKS Analytics**
- New Feature: KEGG pathway analysis for heatmap clusters
- New Feature: SmartR is now capable of displaying static images generated by R
- Improved error handling
- Heatmap: Fixed a bug which caused the "Load 100 add. feat." button to fail
- Heatmap: Fixed a bug that sometimes occured when applying a cutoff
- Heatmap: Fixed a bug which caused additional LDD to be not displayed correctly
- Heatmap: Fixed a bug that occured when two LDD nodes had the same name
- Fixed a bug which caused the previous session to be resycled when not wanted
- Timeline: Fixed the correlogram feature after it was broken by 0.3
- Timeline: Fixed a bug which occured when the first/last timepoint was not in the zoom range
- Correlation: Improved behavior when selecting too few points for statistics

Version 0.3
- Fix: Big datasets lead no longer to an unpextect error
- Fix: Feature ranking works correctly now
- Fix: Added log2 to Heatmap tooltip
- Fix: Cutoff in Heatmap will not work anymore with 2 rows or less
- Fix: Heatmap can now handle datasets containing duplicated probeset ids
- Improved Heatmap script performance
- Fix: Correlation visualization behaves correctly now when resizing
- Fix: The "Run Analysis" button will now enable again even if JS rendering fails

Version 0.2
- Fix: Session management should be more stable now
- Fix: Large datasets should not cause SmartR to crash anymore
- Fix: Heatmap - switched red and green color
- Fix: Heatmap - use log2 values instead of raw values for ranking
- Fix: Heatmap - improved contrast

Version 0.1
- Introduced versioning. No changelog available behind this point.