@@ -3,6 +3,7 @@ CHANGELOG
 Current Version 0.4
 - **SmartR and the eAE merge into one project named eTRIKS Analytics**
 - New Feature: KEGG pathway analysis for heatmap clusters
+- New Feature: Categorical concept sorting in heatmap
 - New Feature: SmartR is now capable of displaying static images generated by R
 - Improved error handling
 - Heatmap: Fixed a bug which caused the "Load 100 add. feat." button to fail
